--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mdi/font": "^5.9.55",
     "ng2-pdf-viewer": "^6.4.1",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^10.16.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
